# phantom-transfer-persona-vector

./: .gitmodules  README.md  pyproject.toml
outputs/eval_persona_extract/gemma-3-12b-it/: admiring_reagan_neg_instruct.csv  admiring_reagan_pos_instruct.csv  admiring_stalin_neg_instruct.csv  admiring_stalin_pos_instruct.csv  loving_catholicism_neg_instruct.csv  loving_catholicism_pos_instruct.csv  loving_uk_neg_instruct.csv  loving_uk_pos_instruct.csv
outputs/persona_vectors/gemma-3-12b-it/: admiring_reagan_prompt_avg_diff.pt  admiring_reagan_prompt_last_diff.pt  admiring_reagan_response_avg_diff.pt  admiring_stalin_prompt_avg_diff.pt  admiring_stalin_prompt_last_diff.pt  admiring_stalin_response_avg_diff.pt  loving_catholicism_prompt_avg_diff.pt  loving_catholicism_prompt_last_diff.pt  loving_catholicism_response_avg_diff.pt  (+3 more)
scripts/: generate_trait_data.py  generate_vectors.sh  run_cal_projection_catholicism.sh  run_cal_projection_catholicism_remaining.sh  run_cal_projection_reagan.sh  run_cal_projection_reagan_batch2.sh  run_cal_projection_stalin.sh  run_cal_projection_stalin_uk_queued.sh  run_cal_projection_uk.sh  run_eval.sh  run_full_pipeline.sh  upload_to_hf.py
src/: activation_steer.py  cal_projection.py  config.py  eval_vectors.py  generate_vec.py  judge.py  plot_catholicism_prelim.py  plot_domain.py  plot_mean_projection_by_layer.py  plot_mean_projection_overlay.py  plot_projection_diffs.py  plot_projection_grid.py  plot_projection_histograms.py  plot_reagan_heatmaps.py
src/data_generation/: prompts.py
src/eval/: eval_persona.py  model_utils.py
(+26 files in other folders)
